Ajustando o carrossel e incrementando o rodapé

--- a/paginas/Carrossel/carrossel.html
+++ b/paginas/Carrossel/carrossel.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">s
+
     <script type="text/javascript" src="../../js/script.js"></script>
 
     <title>-- Etec João Belarmino --</title>
@@ -16,12 +18,11 @@
   </head>
   <body>
     
-
     <!--inicio carrosel -->
-    <section id="home">
+    <section>
       <div class="row">
         <div class="col-md-12"> 
-          <div = class="container">
+          <div class="container d-flex">
             <div id="demo" class="carousel slide" data-ride="carousel">
 
             <!-- Indicators -->
@@ -34,21 +35,21 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://picsum.photos/1200/800?Random.html" alt="Los Angeles">
+                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
                 <div class="carousel-caption">
                   <h3>Bem vindo ao Novo Site da Etec</h3>
                   <p>Venha ser Etec JB</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="Chicago">
+                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
                 <div class="carousel-caption">
                   <h3>Bem vindo ao Novo Site da Etec</h3>
                   <p>Venha ser Etec JB</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="New York">
+                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
                 <div class="carousel-caption">
                   <h3>Bem vindo ao Novo Site da Etec</h3>
                   <p>Venha ser Etec JB</p>
