--- a/paginas/Principal/principal.html
+++ b/paginas/Principal/principal.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
     <script type="text/javascript" src="../../js/script.js"></script>
 
     <title>-- Etec João Belarmino --</title>
@@ -46,10 +48,10 @@
     <!-- fim cabecalho-->
 
     <!--inicio carrosel -->
-    <section id="home">
+    <section>
       <div class="row">
         <div class="col-md-12"> 
-          <div = class="container">
+          <div class="container d-flex">
             <div id="demo" class="carousel slide" data-ride="carousel">
 
             <!-- Indicators -->
@@ -62,21 +64,21 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://picsum.photos/1200/800?Random.html" alt="Los Angeles">
+                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
                 <div class="carousel-caption">
                   <h3>Bem vindo ao Novo Site da Etec</h3>
                   <p>Venha ser Etec JB</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="Chicago">
+                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
                 <div class="carousel-caption">
                   <h3>Bem vindo ao Novo Site da Etec</h3>
                   <p>Venha ser Etec JB</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="New York">
+                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
                 <div class="carousel-caption">
                   <h3>Bem vindo ao Novo Site da Etec</h3>
                   <p>Venha ser Etec JB</p>
@@ -97,6 +99,58 @@
     </section>
     <!--fim carrosel -->
 
+  <!--inicio rodape -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <img src="../../Imagem/Logo Etec/logoNegativo.png" width="150" height="150" style="border-radius: 20px">
+          </div>
+          <div class="col-md-3">
+            <h4> Localização </h4>
+            <a href="https://www.google.com/maps/place/ETEC+Jo%C3%A3o+Belarmino/@-22.7065477,-46.7672314,17z/data=!4m5!3m4!1s0x94c92147d6b7f687:0x47221efa058bc901!8m2!3d-22.7065477!4d-46.7650427">
+              <img src="../../Imagem/Icone Localização/map-marker.svg" width="50"> 
+            </a>
+            <p>
+              Rua Sete de Setembro, 299 Centro, Amparo/SP CEP: 13900-372
+            </p>
+          </div>
+          <div class="col-md-3">
+            <h4>Atendimento</h4>
+            <p>
+              Fones: 19-3807-2288
+            </p>
+            <h6>Secretaria</h6>
+            <a href="mailto:e067acad@cps.sp.gov.br">e067acad@cps.sp.gov.br</a>
+            <h6>Diretoria de Serviços</h6>
+            <a href="mailto:e067adm@cps.sp.gov.br">e067adm@cps.sp.gov.br</a>
+          </div>
+          <div class="col-md-3">
+            <h4>Horario de Funcionamento</h4>
+            <p>
+              Horário da Escola: 07:00h às 22:50
+            </p>
+            <h6>Horário Secretaria</h6>
+            <p>
+              Segunda-feira a Sexta-feira<br>
+              Período da Manhã: das 09h às 12h30<br>
+              Período da Tarde: das 15h às 17h30<br>
+              Período da Noite: das 18h30 às 21h<br>
+            </p>
+
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <dir class="container">
+      <div class="row">
+        <div class="col-md-12">
+          Desenvolvido por: <span> &copyEquipe TI João Belarmino</span>
+        </div>
+      </div>
+    </dir>
+  <!--fim rodape -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
