--- a/paginas/Contato/contato.html
+++ b/paginas/Contato/contato.html
@@ -38,7 +38,7 @@
               <a class="nav-item nav-link" href="#"><span>Biblioteca</span></a>
               <a class="nav-item nav-link" href="#"><span>APM</span></a>
               <a class="nav-item nav-link" href="#"><span>Eventos</span></a>
-              <a class="nav-item nav-link" href="contato.html"><span>Contato</span></a>
+              <a class="nav-item nav-link" href="#"><span>Contato</span></a>
             </ul>
            </div>
          </div>
@@ -47,57 +47,42 @@
     </head>
     <!-- fim cabecalho-->
 
-    <!--inicio carrosel -->
-    <section>
-      <div class="row">
-        <div class="col-md-12"> 
-          <div class="container d-flex">
-            <div id="demo" class="carousel slide" data-ride="carousel">
-
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-              <li data-target="#demo" data-slide-to="0" class="active"></li>
-              <li data-target="#demo" data-slide-to="1"></li>
-              <li data-target="#demo" data-slide-to="2"></li>
-            </ul>
-
-            <!-- The slideshow -->
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
-                <div class="carousel-caption">
-                  <h3>Bem vindo ao Novo Site da Etec</h3>
-                  <p>Venha ser Etec JB</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
-                <div class="carousel-caption">
-                  <h3>Bem vindo ao Novo Site da Etec</h3>
-                  <p>Venha ser Etec JB</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
-                <div class="carousel-caption">
-                  <h3>Bem vindo ao Novo Site da Etec</h3>
-                  <p>Venha ser Etec JB</p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </a>
+    <section id="contato">
+      <div class="container">
+        <h1>Contato</h1><hr>
+        <div class="row">
+          <div class="col-md-6">
+            <strong>Etec João Belarmino</strong>
+            <p>
+              Rua Sete de Setembro, 299, Amparo/SP
+            </p>
+            <p>
+              CEP: 13900-372
+            </p>
+            <p>
+              Fone: (19) 3807-2288
+            </p>
+            <br>
+            <strong>Horário de Atendimento da Secretaria</strong>
+            <p>
+              De segunda a sexta-feira
+            </p>
+            <p>
+              Período da Manhã: das 09h às 12h30
+            </p>
+            <p>
+              Período da Tarde: das 15h às 17h30
+            </p>
+            <p>
+              Período da Noite: das 18h30 às 21h
+            </p>  
           </div>
-        </div>
+          <div class="col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3680.5833922059205!2d-46.767231385037974!3d-22.706547685114085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c92147d6b7f687%3A0x47221efa058bc901!2sETEC+Jo%C3%A3o+Belarmino!5e0!3m2!1spt-BR!2sbr!4v1547771494295" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>  
       </div>
     </section>
-    <!--fim carrosel -->
 
   <!--inicio rodape -->
     <footer>
@@ -155,7 +140,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script class="embed-responsive" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </body>
 </html>
