Inserção da página escola com efeito parallax

--- a/paginas/Principal/principal.html
+++ b/paginas/Principal/principal.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav navegacaoTopo">
             <ul class="navbar-nav">
-              <a class="nav-item nav-link active" href="#"><span>Escola</span></a>
+              <a class="nav-item nav-link active" href="escola.html"><span>Escola</span></a>
               <a class="nav-item nav-link" href="#"><span>Diretoria Academica</span></a>
               <a class="nav-item nav-link" href="#"><span>Diretoria de Serviços</span></a>
               <a class="nav-item nav-link" href="#"><span>Biblioteca</span></a>
