--- a/paginas/Diretoria Academica/diretoriaAcademica.html
+++ b/paginas/Diretoria Academica/diretoriaAcademica.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" type="text/css" href="../../css/estilo.css">
   </head>
-  <body>
+  <body id="escola" class="diretoriaAcademica">
     
     <!-- inicio cabecalho-->
     <head>
@@ -47,57 +47,107 @@
     </head>
     <!-- fim cabecalho-->
 
-    <!--inicio carrosel -->
-    <section>
-      <div class="row">
-        <div class="col-md-12"> 
-          <div class="container d-flex">
-            <div id="demo" class="carousel slide" data-ride="carousel">
+    <h1>Secretaria Academica</h1>
 
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-              <li data-target="#demo" data-slide-to="0" class="active"></li>
-              <li data-target="#demo" data-slide-to="1"></li>
-              <li data-target="#demo" data-slide-to="2"></li>
-            </ul>
+    <section class="d-flex">
+      <div class="container">
 
-            <!-- The slideshow -->
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
-                <div class="carousel-caption">
-                  <h3>Bem vindo ao Novo Site da Etec</h3>
-                  <p>Venha ser Etec JB</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
-                <div class="carousel-caption">
-                  <h3>Bem vindo ao Novo Site da Etec</h3>
-                  <p>Venha ser Etec JB</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://picsum.photos/1200/800?Random" alt="Etec João Belarmino" class="img-fluid">
-                <div class="carousel-caption">
-                  <h3>Bem vindo ao Novo Site da Etec</h3>
-                  <p>Venha ser Etec JB</p>
-                </div>
-              </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-              <span class="carousel-control-prev-icon"></span>
+        <div class="row">
+          <dir class="col-md-6">
+            <h2> Acesso ao NSA </h2>
+          </dir>
+          <dir class="col-md-6">
+            <a href="https://nsa.cps.sp.gov.br/">
+              <img src="../../Imagem/NSA/nsaonline.png" width="200">
             </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
-              <span class="carousel-control-next-icon"></span>
-            </a>
-          </div>
+          </dir>
         </div>
+        <hr>
+
+        <div class="row">
+          <dir class="col-md-6">
+            <a href='#'>
+              <img src="../../Imagem/Calendário Escolar/calendarioEscolar.png" width="200">
+            </a>
+          </dir>
+          <dir class="col-md-6">
+            <h2> Calendário Escolar </h2>
+          </dir>
+        </div>
+        <hr>
+
+        <div class="row">
+          <dir class="col-md-6">
+            <h2> Certificação de Competencias </h2>
+          </dir>
+          <dir class="col-md-6">
+            <a href='#'>
+              <img src="../../Imagem/Certificado Competencia/certificado.jpg" width="200">
+            </a>
+          </dir>
+        </div>
+        <hr>
+
+        <div class="row">
+          <dir class="col-md-6">
+            <a href=#>
+              <img src="../../Imagem/Expedicao Documento/expedicaoDocumento.jpg" width="200">
+            </a>
+          </dir>
+          <dir class="col-md-6">
+            <h2> Expedição de Documentos </h2>
+          </dir>
+        </div>
+        <hr>  
+
+        <div class="row">
+          <dir class="col-md-6">
+            <h2> Reclassificação / Reconsideração de Notas </h2>
+          </dir>
+          <dir class="col-md-6">
+            <a href="#">
+              <img src="../../Imagem/Classificacão Escolar/classificacaoEscolar.png" width="200">
+            </a>
+          </dir>
+        </div>
+        <hr>
+
+        <div class="row">
+          <dir class="col-md-6">
+            <a href='#'>
+              <img src="../../Imagem/Resultado Gabarito/resultadoGabarito.jpg" width="200">
+            </a>
+          </dir>
+          <dir class="col-md-6">
+            <h2> Gabarito Escolar </h2>
+          </dir>
+        </div>
+        <hr>
+
+        <div class="row">
+          <dir class="col-md-6">
+            <h2> Vestibulinho Etec </h2>
+          </dir>
+          <dir class="col-md-6">
+            <a href='https://www.vestibulinhoetec.com.br/home/'>
+              <img src="../../Imagem/Vestibulinho/vestibulinho.png" width="300" style="padding-top: 30px;">
+            </a>
+          </dir>
+        </div>
+        <hr>
+
+        <div class="row">
+          <dir class="col-md-6">
+            <a href=#>
+              <img src="../../Imagem/Vaga Remanescentes/vagasRemanescentes.jpg" width="200">
+            </a>
+          </dir>
+          <dir class="col-md-6">
+            <h2> Vagas Remanescentes </h2>
+          </dir>
+        </div>             
       </div>
     </section>
-    <!--fim carrosel -->
 
   <!--inicio rodape -->
     <footer>
@@ -155,7 +205,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script class="embed-responsive" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </body>
 </html>
