Ajuste links de nagegação para diretoria de serviços Inserção da página diretoriaServiços com efeito cards

--- a/paginas/Principal/principal.html
+++ b/paginas/Principal/principal.html
@@ -34,7 +34,7 @@
             <ul class="navbar-nav">
               <a class="nav-item nav-link active" href="escola.html"><span>Escola</span></a>
               <a class="nav-item nav-link" href="diretoriaAcademica.html"><span>Diretoria Academica</span></a>
-              <a class="nav-item nav-link" href="#"><span>Diretoria de Serviços</span></a>
+              <a class="nav-item nav-link" href="diretoriaServicos"><span>Diretoria de Serviços</span></a>
               <a class="nav-item nav-link" href="#"><span>Biblioteca</span></a>
               <a class="nav-item nav-link" href="#"><span>APM</span></a>
               <a class="nav-item nav-link" href="#"><span>Eventos</span></a>
