Adicionando sessão dos cursos na pagina principal Ajustando a página ativa Adicionando um tamanho 20px padrão na fonte do html Corrigindo links de navegação

--- a/paginas/Principal/contato.html
+++ b/paginas/Principal/contato.html
@@ -32,13 +32,13 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav navegacaoTopo">
             <ul class="navbar-nav">
-              <a class="nav-item nav-link active" href="#"><span>Escola</span></a>
-              <a class="nav-item nav-link" href="#"><span>Diretoria Academica</span></a>
-              <a class="nav-item nav-link" href="#"><span>Diretoria de Serviços</span></a>
+              <a class="nav-item nav-link" href="escola.html"><span>Escola</span></a>
+              <a class="nav-item nav-link" href="diretoriaAcademica.html"><span>Diretoria Academica</span></a>
+              <a class="nav-item nav-link" href="diretoriaServicos.html"><span>Diretoria de Serviços</span></a>
               <a class="nav-item nav-link" href="#"><span>Biblioteca</span></a>
               <a class="nav-item nav-link" href="#"><span>APM</span></a>
               <a class="nav-item nav-link" href="#"><span>Eventos</span></a>
-              <a class="nav-item nav-link" href="#"><span>Contato</span></a>
+              <a class="nav-item nav-link active" href="contato.html"><span>Contato</span></a>
             </ul>
            </div>
          </div>
