--- a/paginas/Rodape/rodape.html
+++ b/paginas/Rodape/rodape.html
@@ -47,14 +47,18 @@
           <div class="col-md-3">
             <h4>Horario de Funcionamento</h4>
             <p>
-              Horário da Escola: 07:00h às 22:50
+              Horário da Escola:<br> 
+              07:00h às 22:50
             </p>
             <h6>Horário Secretaria</h6>
             <p>
               Segunda-feira a Sexta-feira<br>
-              Período da Manhã: das 09h às 12h30<br>
-              Período da Tarde: das 15h às 17h30<br>
-              Período da Noite: das 18h30 às 21h<br>
+              Período da Manhã:<br>
+               das 09h às 12h30<br>
+              Período da Tarde:<br>
+              das 15h às 17h30<br>
+              Período da Noite:<br>
+              das 18h30 às 21h<br>
             </p>
 
           </div>
