--- a/paginas/Principal/escola.html
+++ b/paginas/Principal/escola.html
@@ -33,8 +33,8 @@
           <div class="navbar-nav navegacaoTopo">
             <ul class="navbar-nav">
               <a class="nav-item nav-link active" href="escola.html"><span>Escola</span></a>
-              <a class="nav-item nav-link" href="#"><span>Diretoria Academica</span></a>
-              <a class="nav-item nav-link" href="#"><span>Diretoria de Serviços</span></a>
+              <a class="nav-item nav-link" href="diretoriaAcademica.html"><span>Diretoria Academica</span></a>
+              <a class="nav-item nav-link" href="diretoriaServicos.html"><span>Diretoria de Serviços</span></a>
               <a class="nav-item nav-link" href="#"><span>Biblioteca</span></a>
               <a class="nav-item nav-link" href="#"><span>APM</span></a>
               <a class="nav-item nav-link" href="#"><span>Eventos</span></a>
